--- a/sprint-one/src/components/Header/Header.scss
+++ b/sprint-one/src/components/Header/Header.scss
@@ -1,116 +1,88 @@
+@import "../../styles/styles.scss";
+
 .header {
   width: 100%;
   margin: 0;
   height: 169px;
   padding: 0 5%;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
-}
 
-@media screen and (min-width: 768px) {
-  .header {
+  @include tablet {
     padding: 0 3.125%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     height: 80px;
   }
-}
 
-@media screen and (min-width: 1200px) {
-  .header {
+  @include desktop {
     padding: 0 15%;
   }
-}
 
-.header__logo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 48px;
-  width: 100%;
-}
+  &__logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 48px;
+    width: 100%;
 
-@media screen and (min-width: 768px) {
-  .header__logo-container {
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
+    @include tablet {
+      justify-content: flex-start;
+    }
   }
-}
 
-.header__search {
-  width: 288px;
-  height: 48px;
-  margin-bottom: 8px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
+  &__search {
+    width: 288px;
+    height: 48px;
+    margin-bottom: 8px;
+    box-sizing: border-box;
+    font-size: 1.0625rem;
+    background-image: url("../../assets/icons/Icon-search.svg");
+    background-repeat: no-repeat;
+    background-position: 12px 12px;
+    background-size: 20px;
+    padding: 11px 8px 11px 40px;
 
-@media screen and (min-width: 768px) {
-  .header__search {
-    margin: 0;
-    width: 225px;
+    @include tablet {
+      margin: 0;
+      width: 225px;
+    }
   }
-}
 
-.header__search-container {
-  width: 288px;
-  margin: 0 auto;
-}
-
-.header__user {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.header__user-button {
-  background-color: #0095ff;
-  color: white;
-  font-family: "Avenir";
-  font-weight: 500;
-  border-radius: 4px;
-  font-size: 17px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  border: none;
-  outline: none;
-  box-sizing: border-box;
-  height: 48px;
-  width: 224px;
-  margin: 0 16px 16px 0;
-}
-
-.header__user-button:hover {
-  background-color: #0065ad;
-}
-
-@media screen and (min-width: 768px) {
-  .header__user-button {
-    margin: 0 24px;
-    width: 110px;
+  &__search-container {
+    width: 288px;
+    margin: 0 auto;
   }
-}
 
-.header__user-picture {
-  width: 48px;
-  height: 48px;
-  border-radius: 25px;
-  -o-object-fit: cover;
-  object-fit: cover;
-  -o-object-position: 0% 0;
-  object-position: 0% 0;
+  &__user {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__user-button {
+    @include button-design;
+    padding-left: 20px;
+    height: 48px;
+    width: 224px;
+    margin: 0 16px 16px 0;
+    background-image: url("../../assets/icons/Icon-upload.svg");
+    background-repeat: no-repeat;
+    background-position: 12px 15px;
+
+    &:hover {
+      background-color: $hover-color;
+    }
+
+    @include tablet {
+      margin: 0 24px;
+      width: 110px;
+    }
+  }
+
+  &__user-picture {
+    width: 48px;
+    height: 48px;
+    border-radius: 25px;
+    object-fit: cover;
+    object-position: 0% 0;
+  }
 }
