--- a/sprint-one/src/styles/partials/_variables.scss
+++ b/sprint-one/src/styles/partials/_variables.scss
@@ -12,3 +12,4 @@ $primary-color: #0095ff;
 $secondary-color: white;
 $nuetral-color: #fafafa;
 $nuetral-background: #e1e1e1;
+$hover-color: #0065ad;
