--- a/sprint-one/src/styles/styles.scss
+++ b/sprint-one/src/styles/styles.scss
@@ -1,6 +1,6 @@
-@import "variables";
-@import "mixins";
-@import "typography";
+@import "./partials/variables";
+@import "./partials/mixins";
+@import "./partials/typography";
 
 body {
   margin: 0;
