--- a/sprint-one/src/styles/partials/_mixins.scss
+++ b/sprint-one/src/styles/partials/_mixins.scss
@@ -16,7 +16,7 @@
   font-family: "Avenir";
   font-weight: 500;
   border-radius: 4px;
-  font-size: 17px;
+  font-size: 1rem;
   box-sizing: border-box;
   border: none;
   outline: none;
