--- a/sprint-one/src/styles/partials/_typography.scss
+++ b/sprint-one/src/styles/partials/_typography.scss
@@ -1,20 +1,20 @@
 @font-face {
   font-family: "Avenir";
-  src: url("../assets/fonts/AvenirNextProLT/Linotype\ -\ AvenirNextLTPro-Regular.otf") format("opentype");
+  src: url("../../assets/fonts/AvenirNextProLT/Linotype-AvenirNextLTPro-Regular.otf") format("opentype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Avenir";
-  src: url("../assets/fonts/AvenirNextProLT/alternative-files/Linotype\ -\ Avenir\ Next\ LT\ Pro\ Bold.ttf") format("truetype");
+  src: url("../../assets/fonts/AvenirNextProLT/alternative-files/Linotype-AvenirNextLTProBold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Avenir";
-  src: url("../assets/fonts/AvenirNextProLT/alternative-files/Linotype\ -\ Avenir\ Next\ LT\ Pro\ Demi.ttf") format("truetype");
+  src: url("../../assets/fonts/AvenirNextProLT/alternative-files/Linotype-AvenirNextLTProDemi.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
