--- a/sprint-one/src/components/Header/Header.scss
+++ b/sprint-one/src/components/Header/Header.scss
@@ -41,6 +41,14 @@
     background-position: 12px 12px;
     background-size: 20px;
     padding: 11px 8px 11px 40px;
+    border-radius: 4px;
+    border: 1px solid $nuetral-background;
+    background-color: $nuetral-color;
+
+    &:active,
+    &:focus {
+      outline-color: $primary-color;
+    }
 
     @include tablet {
       margin: 0;
@@ -66,7 +74,11 @@
     margin: 0 16px 16px 0;
     background-image: url("../../assets/icons/Icon-upload.svg");
     background-repeat: no-repeat;
-    background-position: 12px 15px;
+    background-position: 64px 15px;
+
+    @include tablet {
+      background-position: 12px 15px;
+    }
 
     &:hover {
       background-color: $hover-color;
