state created. added map to display array values.

--- a/sprint-one/src/components/Video/Video.scss
+++ b/sprint-one/src/components/Video/Video.scss
@@ -1,7 +1,8 @@
 @import "../../styles/styles.scss";
 
 .video {
-  background-image: url("../../assets/images/video-list-0.jpg");
+  // background-image: url("../../assets/images/video-list-0.jpg");
+  background-color: black;
   background-size: cover;
   justify-content: center;
   align-items: center;
