--- a/sprint-one/src/App.scss
+++ b/sprint-one/src/App.scss
@@ -1,11 +1,13 @@
 @import "./styles/styles.scss";
 
 .main {
-  display: flex;
-  flex-direction: column;
+  &__page-container {
+    display: flex;
+    flex-direction: column;
 
-  @include desktop {
-    flex-flow: row wrap;
+    @include desktop {
+      flex-flow: row wrap;
+    }
   }
 
   &__text-container {
