--- a/sprint-one/src/components/Comments/Comments.scss
+++ b/sprint-one/src/components/Comments/Comments.scss
@@ -10,16 +10,14 @@
     border-bottom: 1px solid $nuetral-background;
     padding-bottom: 24px;
     padding-top: 24px;
-    // max-width: 560px;
-    // margin: 0 auto;
 
-    &:first-of-type {
-      border-top: 1px solid $nuetral-background;
-    }
+    // &:first-of-type {
+    //   border-top: 1px solid $nuetral-background;
+    // }
 
-    &:last-of-type {
-      margin-bottom: 40px;
-    }
+    // &:last-of-type {
+    //   margin-bottom: 40px;
+    // }
 
     &-profile {
       width: 40px;
