--- a/sprint-one/src/components/Comments/Comments.scss
+++ b/sprint-one/src/components/Comments/Comments.scss
@@ -5,6 +5,14 @@
   font-size: 0.875rem;
   line-height: 1.375rem;
 
+  @include tablet {
+    padding: 0 3.125%;
+  }
+
+  @include desktop {
+    padding: 0 0 0 12.5%;
+  }
+
   &__history {
     display: flex;
     border-bottom: 1px solid $nuetral-background;
