--- a/sprint-one/src/components/Next/Next.scss
+++ b/sprint-one/src/components/Next/Next.scss
@@ -8,11 +8,19 @@
   }
 
   @include desktop {
-    padding: 0 12.5%;
+    padding: 0 24px;
   }
 
   &__title {
     margin: 40px 0;
+    color: $nuetral-font;
+    font-size: 0.75rem;
+    line-height: 1.25rem;
+    font-weight: 500;
+
+    @include desktop {
+      margin: 0 0 40px 0;
+    }
   }
 
   &__video-container {
@@ -23,10 +31,27 @@
   &__video-picture {
     width: 120px;
     height: 70px;
+    object-fit: cover;
+    border-radius: 4px;
+
+    &-container {
+      margin-right: 16px;
+    }
+  }
+
+  &__video-content-container {
+    max-width: 204px;
   }
 
   &__video-content-title {
     margin-bottom: 16px;
     font-weight: 500;
+    height: 37px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-width: 150px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 }
