--- a/sprint-one/src/components/Next/Next.scss
+++ b/sprint-one/src/components/Next/Next.scss
@@ -8,7 +8,10 @@
   }
 
   @include desktop {
-    padding: 0 24px;
+    padding: 0 0 0 6.085%;
+    border-left: 1px solid $nuetral-background;
+    padding-top: 32px;
+    padding-bottom: 100%;
   }
 
   &__title {
@@ -46,7 +49,6 @@
   &__video-content-title {
     margin-bottom: 16px;
     font-weight: 500;
-    height: 37px;
     overflow: hidden;
     text-overflow: ellipsis;
     min-width: 150px;
