--- a/sprint-one/src/components/Video/Video.scss
+++ b/sprint-one/src/components/Video/Video.scss
@@ -1,21 +1,37 @@
 @import "../../styles/styles.scss";
 
 .video {
-  background-size: cover;
   justify-content: center;
   align-items: center;
   margin-bottom: 32px;
-  height: calc(9 / 16 * 100vw);
   display: flex;
-  position: relative;
+  background-color: black;
+
+  @include desktop {
+    margin-bottom: 0;
+  }
 
   &__video {
     width: 100%;
+    height: 100%;
+    justify-content: center;
+    object-fit: cover;
 
     &-container {
       width: 100%;
-      // max-width: 700px;
-      // max-height: 400px;
+      height: calc(9 / 16 * 100vw);
+      margin: 0 auto;
+      position: relative;
+
+      @include tablet {
+        width: 90vw;
+        height: calc(9 / 16 * 90vw);
+      }
+
+      @include desktop {
+        width: 70vw;
+        height: calc(9 / 16 * 70vw);
+      }
     }
   }
 
@@ -23,9 +39,10 @@
     display: flex;
     position: absolute;
     bottom: 0;
-    width: 90%;
+    width: 100%;
     margin-bottom: 10px;
     padding: 0 5%;
+    box-sizing: border-box;
 
     &-play {
       border: 0;
@@ -52,6 +69,10 @@
       margin: 0 2.5%;
       border-radius: 4px;
       box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 16px;
 
       @include tablet {
         display: flex;
@@ -61,14 +82,10 @@
       }
 
       &-bar {
-        border-top: 5px solid black;
-        width: 84%;
-        transform: translate(9.5%, 344%);
+        background-color: black;
+        height: 5px;
+        flex: 1 0 1%;
         border-radius: 4px;
-
-        @include tablet {
-          transform: translate(-2.5%, -35%);
-        }
       }
 
       &-numbers {
@@ -78,6 +95,7 @@
           display: inline;
           color: white;
           font-size: 0.8rem;
+          margin-left: 16px;
         }
       }
     }
