final commit - folder clean up, minor styling tweaks.

--- a/sprint-one/src/App.scss
+++ b/sprint-one/src/App.scss
@@ -18,6 +18,8 @@
       flex-direction: column;
       width: 61.9444%;
       padding-top: 32px;
+      border-right: 1px solid $nuetral-background;
+      padding-bottom: 20px;
     }
 
     &__video-reading-container {
