upload page styled

--- a/sprint-two/src/components/Header/Header.scss
+++ b/sprint-two/src/components/Header/Header.scss
@@ -3,7 +3,8 @@
 .header {
   width: 100%;
   margin: 0;
-  height: 169px;
+  // height: 169px;
+  height: 52.816vw;
   padding: 0 5%;
   box-sizing: border-box;
 
