address console errors, updated alt tags, styling fixes, added scrollTo functionality. all minimum requirements complete.

--- a/sprint-two/src/components/Next/Next.scss
+++ b/sprint-two/src/components/Next/Next.scss
@@ -41,7 +41,7 @@
   }
 
   &__video-content-container {
-    max-width: 204px;
+    max-width: 166px;
   }
 
   &__video-content-title {
@@ -53,5 +53,6 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    line-height: 18px;
   }
 }
