--- a/sprint-two/src/components/Player/Player.scss
+++ b/sprint-two/src/components/Player/Player.scss
@@ -74,10 +74,7 @@
     padding-right: 2.5%;
     margin: 0;
     font-weight: 700;
-
-    @include tablet {
-      width: 98px;
-    }
+    white-space: nowrap;
   }
 
   &__video-date {
